--- a/notebooks/eda.ipynb
+++ b/notebooks/eda.ipynb
@@ -48,7 +48,8 @@
     "<!-- Insight -->\n",
     "- There are several columns with null/missing values, such as Customer Zipcode, Order Zipcode, and Product Description. (These do not have a significant impact, so they can either be removed [optional] or left as-is.)\n",
     "- Convert order date (DateOrders) and shipping date (DateOrders) to datetime.\n",
-    "- Create a New Column: Shipping delays."
+    "- Create a New Column: Shipping delays.\n",
+    "- Drop Irrelevant Data"
    ]
   },
   {
@@ -58,9 +59,13 @@
    "outputs": [],
    "source": [
     "# Cleaning and Preprocessing Data\n",
+    "df[\"Customer FullName\"] = df[[\"Customer Fname\", \"Customer Lname\"]].fillna(\"\").agg(\" \".join, axis=1).str.strip()\n",
+    "\n",
     "df[\"order date (DateOrders)\"] = pd.to_datetime(df[\"order date (DateOrders)\"])\n",
     "df[\"shipping date (DateOrders)\"] = pd.to_datetime(df[\"shipping date (DateOrders)\"])\n",
-    "df[\"shipping delays (DateOrders)\"] = (df[\"shipping date (DateOrders)\"]-df[\"order date (DateOrders)\"]).dt.days"
+    "df[\"shipping delays (DateOrders)\"] = (df[\"shipping date (DateOrders)\"]-df[\"order date (DateOrders)\"]).dt.days\n",
+    "\n",
+    "df = df.drop(columns=[\"Latitude\", \"Longitude\", \"Order Zipcode\", \"Product Description\", \"Customer Fname\", \"Customer Lname\"])"
    ]
   },
   {
